# InfernoCalibNet

./: .gitignore  CODE_OF_CONDUCT.md  README.md  config.py  devInstall.sh  envSetup.sh  exec.py  pyproject.toml  run.py
notebooks/: 01-test.ipynb  02-notes.ipynb  03-test_wandb.ipynb  test.ipynb
notes/: 01-NN.md
src/: ICNTrainer.py  XRayDataset.py  augement.py  loss_functions.py  prePro.py  utils.py
