[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infernoCalibNet"
version = "0.1.0"
dependencies = [
  "python-dotenv",
  "numpy>=1.26.4",
  "pandas>=2.2.3",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "seaborn>=0.13.2",
  "joblib>=1.4.2",
  "matplotlib>=3.9.2"
]
requires-python = ">=3.11.9"
description = "Calibrating neural networks with Bayesian nonparametric regression (Inferno) to quantify uncertainty and improve prediction reliability."

[tool.hatch.build.targets.wheel]
packages = ["src"]