# Will install build dependencies automatically
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infernoCalibNet"
version = "1.1.0"
dependencies = [
  "python-dotenv",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "seaborn",
  "joblib",
  "matplotlib",
  "torch",
  "wandb",
  "rich",
  "torchmetrics",
  "InquirerPy",
  "tqdm"
]
requires-python = ">=3.11.9"
description = "Calibrating neural networks with Bayesian nonparametric regression (Inferno) to quantify uncertainty and improve prediction reliability."

[tool.hatch.build.targets.wheel]
packages = ["src"]

